# sktime-mcp

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CODEBASE.md  Dockerfile  FIX.md  Makefile  PR_DESCRIPTION.md  README.md  add_method.py  benchmark_issue91.py  debug_eval.py  demo.py  docker-compose.yml  edge_case_results.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_data.csv  test_fastapi.py  test_out.txt  test_results.json  test_sanitize.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml  mcp_test.yaml
agentic_forecaster/: README.md  agent.py  main.py
architecture/: index.html
background-jobs/: index.html
data-sources/: index.html
dev-guide/: index.html
docs/: background-jobs.md  data-sources.md  dev-guide.md  doc_review_plan.md  index.md  lazy-loading.md  requirements.txt  usage-examples.md  user-guide.md
docs/_build/html/: .buildinfo  architecture.html  background-jobs.html  data-sources.html  genindex.html  intro.html  py-modindex.html  searchindex.js  usage-examples.html
docs/_build/html/.doctrees/: data-sources.doctree  environment.pickle  usage-examples.doctree  user-guide.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/sktime_mcp/: server.html
docs/_build/html/_modules/sktime_mcp/composition/: validator.html
docs/_build/html/_modules/sktime_mcp/registry/: interface.html  tag_resolver.html
docs/_build/html/_modules/sktime_mcp/runtime/: executor.html  handles.html
docs/_build/html/_sources/: dev-guide.md.txt
docs/source/: SYSTEM_ARCHITECTURE.md  agent-workflow-tests.md  api.rst  architecture.md  background-jobs.md  client-setup.md  concepts.md  conf.py  data-sources.md  dev-guide.md  ideal-mcp-tools.md  implementation.md  index.rst  installation.md  intro.md  quickstart.md  usage-examples.md  use-cases.md  user-guide.md
docs/source/developer/: architecture.md  contributing.md
docs/source/user-guide/: async-operations.md  data-management.md  forecasting-workflows.md  persistence.md  pipelines.md
examples/: 01_forecasting_workflow.py  02_llm_query_simulation.py  03_pipeline_instantiation.py  04_mcp_pipeline_demo.py  05_simple_deseasonalize_detrend_forecaster.py  06_simple_naive_forecaster.py  07_agentic_model_selection.py  07_codegen_composite_import_bug_demo.py  07_fh_validation_bug_demo.py  08_external_agent_integration.py  08_lazy_loading_large_files.py  agentic_model_selection.py  background_training_example.py  csv_example.py  external_agent_integration.py  job_management_demo.py  pandas_example.py  router_demo.py  sql_example.py
implementation/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/architecture/: index.html
site/dev-guide/: index.html
site/implementation/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
src/sktime_mcp/: __init__.py  __main__.py  app.py  config.py  server.py  test_diag.py
src/sktime_mcp/benchmark/: __init__.py  runner.py  scorer.py  tasks.py
src/sktime_mcp/benchmark/tasks/: airline.yaml  sunspots.yaml
src/sktime_mcp/composition/: __init__.py  validator.py
src/sktime_mcp/coordination/: router.py
src/sktime_mcp/data/: __init__.py  base.py  lazy_loader.py  registry.py
src/sktime_mcp/data/adapters/: __init__.py  file_adapter.py  pandas_adapter.py  sql_adapter.py  streaming_adapter.py  url_adapter.py
src/sktime_mcp/examples/: diagnostics_demo.py
src/sktime_mcp/registry/: interface.py  tag_resolver.py
src/sktime_mcp/runtime/: __init__.py  _background_loop.py  async_scheduler.py  executor.py  handles.py  jobs.py
src/sktime_mcp/tools/: __init__.py  agentic_iterative.py  analyze_data.py  batch.py  classify.py  codegen.py  compare_estimators.py  composition.py  craft_utils.py  data_schemas.py  data_tools.py  describe_component.py  describe_data.py  describe_estimator.py  diagnose.py  diagnostics.py  evaluate.py  fit_predict.py  format_tools.py  get_agent_trace.py  health.py  inspect_data.py  inspect_estimator.py  instantiate.py  job_tools.py  list_available_data.py  list_estimators.py  metrics.py  plot_tools.py  profile_time_series.py  query_registry.py  recommend_estimators.py  recommend_forecaster.py  save_data.py  save_model.py  split_data.py  streaming_data_tools.py  suggest_pipeline.py  supervised.py  timeseries_diagnostics.py  (+5 more)
stylesheets/: extra.css
tests/: test_agentic_workflow_example.py  test_analyze_data.py  test_async_custom_data.py  test_async_data.py  test_async_data_loading.py  test_async_file.py  test_async_scheduler.py  test_async_sql.py  test_async_sql_and_file_adapter.py  test_async_url_loading_detailed.py  test_background_jobs.py  test_batch_tools.py  test_benchmark.py  test_bug_describe_estimator_docstring_none.py  test_clone_estimator.py  test_codegen.py  test_core.py  test_craft_instantiate.py  test_data_exog_column_validation.py  test_data_frequency_validation.py  test_data_management.py  test_data_schemas.py  test_data_sources.py  test_data_target_column_validation.py  test_data_validation_warnings.py  test_demo_dataset_discovery.py  test_diagnose.py  test_diagnostics.py  test_discovery_consolidated.py  test_evaluate.py  test_evaluate_summary.py  test_example_data_workflows.py  test_examples.py  test_executor_load_dataset.py  test_export_code_dataset_tracking.py  test_external_agent_integration_example.py  test_fit_predict.py  test_fit_predict_coverage.py  test_format_data_handle.py  test_format_tools.py  (+25 more)
usage-examples/: index.html
use-cases/: index.html
user-guide/: index.html
