[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sktime-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) layer for sktime - Registry-Driven for LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "sktime-mcp contributors" }
]
keywords = ["sktime", "mcp", "llm", "forecasting", "time-series", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "sktime>=0.24.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "pmdarima>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
]
# Extended forecasting capabilities
forecasting = [
    "prophet>=1.1.0",
    "tbats>=1.1.0",
    "statsforecast>=1.4.0",
]
# Deep learning for time series
dl = [
    "tensorflow>=2.9.0",
    "torch>=1.9.0",
]
# SQL database support
sql = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pymysql>=1.0.0",  # MySQL
]
# File format support
files = [
    "openpyxl>=3.0.0",  # Excel
    "pyarrow>=10.0.0",  # Parquet
]
# All optional dependencies
all = [
    "pmdarima>=2.0.0",
    "statsmodels>=0.13.0",
    "prophet>=1.1.0",
    "tbats>=1.1.0",
    "statsforecast>=1.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
]

[project.scripts]
sktime-mcp = "sktime_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sktime_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
