[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sktime-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) layer for sktime - Registry-Driven for LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "sktime-mcp contributors" }
]
keywords = ["sktime", "mcp", "llm", "forecasting", "time-series", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "sktime>=0.24.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "pmdarima>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
# Extended forecasting capabilities
forecasting = [
    "prophet>=1.1.0",
    "tbats>=1.1.0",
    "statsforecast>=1.4.0",
]
# Deep learning for time series
dl = [
    "tensorflow>=2.9.0",
    "torch>=1.9.0",
]
# SQL database support
sql = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pymysql>=1.0.0",  # MySQL
]
# File format support
files = [
    "openpyxl>=3.0.0",  # Excel
    "pyarrow>=10.0.0",  # Parquet
]

# MLflow model registry support
mlflow = [
    "mlflow>=2.0",
]
# All optional dependencies
all = [
    "pmdarima>=2.0.0",
    "statsmodels>=0.13.0",
    "prophet>=1.1.0",
    "tbats>=1.1.0",
    "statsforecast>=1.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
    "mlflow>=2.0", 
]

[project.scripts]
sktime-mcp = "sktime_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sktime_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable a broader set of rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "N803", # argument name should be lowercase (allow X)
    "N806", # variable name in function should be lowercase (allow X)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"] # ignore unused imports in tests
"docs/**" = ["PTH"] # Sphinx conf uses traditional path helpers

[tool.ruff.lint.isort]
known-first-party = ["sktime_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
